--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "helmet": "^3.22.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.3.16",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
