--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.3.16",
     "morgan": "^1.9.1",
+    "nanoid": "^4.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
