--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "dist/bin/www.js",
   "scripts": {
-    "start": "nodemon",
+    "start": "pm2-runtime start ecosystem.config.js",
     "build": "npm-run-all clean transpile",
     "server": "node ./dist/bin/www",
     "dev": "NODE_ENV=development npm-run-all build server",
@@ -42,7 +42,8 @@
     "nanoid": "^4.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pm2": "^5.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
