--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "main": "dist/bin/www.js",
   "scripts": {
-    "start": "pm2-runtime start ecosystem.config.js",
+    "start": "nodemon",
+    "startps2": "pm2-runtime start ecosystem.config.js",
     "build": "npm-run-all clean transpile",
     "server": "node ./dist/bin/www",
     "dev": "NODE_ENV=development npm-run-all build server",
