introduce logout and alldata

--- a/front-end/.env.development
+++ b/front-end/.env.development
@@ -1,3 +1,3 @@
-#these env are public, this is a way react incorporates them
+#these env are public, its normal in react
 
 REACT_APP_API_URL=http://localhost:3001
