--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,12 +8,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1380.0",
-    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
-    "firebase": "^7.24.0",
-    "firebase-admin": "^11.8.0",
     "formik": "^2.2.9",
-    "nanoid": "^4.0.1",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
@@ -25,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "NODE_ENV=production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
