--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "express": "~4.16.1",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
+    "mongodb": "^3.7.3",
     "mongoose": "^5.3.16",
     "morgan": "^1.9.1",
     "nanoid": "^4.0.2",
+    "numeral": "^2.0.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
