--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "aws-sdk": "^2.1380.0",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
